--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,41 +1,22 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html layout:decorate="~{layout}" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.w3.org/1999/xhtml" lang="ko">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta charset="UTF-8">
     <title>로그인</title>
-    <link rel="stylesheet" th:href="@{/css/default.css}" />
-    <link rel="stylesheet" th:href="@{/css/common.css}" />
-    <link rel="stylesheet" th:href="@{/css/content.css}" />
-    <link rel="stylesheet" th:href="@{/css/button.css}" />
-    <style>
-        #login_box .signup_btn {background:#42d870; border:0; border-bottom:solid 3px #4ed177; border-radius:50px; width:100%; height:52px; line-height:52px; font-size:16px; color:#fff; text-align:center; margin:20px 0 15px;}
-    </style>
 </head>
-
 <body>
-<div id="login_wrap">
-    <div id="login_box">
-        <div class="login_con">
-            <div class="login_tit">
-                <p>LOG<i>IN</i></p>
-            </div>
-
-            <div class="login_input">
-                <form id="loginForm" onsubmit="return false;" autocomplete="off">
-                    <ul>
-                        <li>
-                            <label for="loginEmail" class="skip_info">이메일</label>
-                            <input type="text" id="loginEmail" name="loginEmail" placeholder="이메일" title="이메일" />
-                        </li>
-                        <li>
-                            <label for="password" class="skip_info">비밀번호</label>
-                            <input type="password" id="password" name="password" title="비밀번호" placeholder="비밀번호" />
-                        </li>
-                    </ul>
-                    <button type="button" onclick="login();" class="login_btn">로그인</button>
-                </form>
-            </div>
+<div layout:fragment="content" class="container my-3">
+    <form th:action="@{/login}" method="post">
+        <div class="mb-3">
+            <label for="email" class="form-label">이메일</label>
+            <input type="text" name="email" id="email" class="form-control">
         </div>
-    </div>
+        <div class="mb-3">
+            <label for="password" class="form-label">비밀번호</label>
+            <input type="password" name="password" id="password" class="form-control">
+        </div>
+        <button type="submit" class="btn btn-primary">로그인</button>
+    </form>
 </div>
+</body>
+</html>
